<resources>
    <string name="app_name">Inwike Division</string>
    <string name="all_rights_reserved">all rights reserved</string>
    <string name="copyright">© 2019</string>
    <string name="dialog_start_scanning_hint">Приложите палец или введите пин</string>
    <string name="enter">Войти</string>
    <string name="qr">Считать QR</string>
    <string name="error">Добавить нарушение</string>
    <string name="allows">Допуск к объектам</string>
    <string name="start_date">Получен:</string>
    <string name="stop_date">Действителен до:</string>
    <string name="not_avail">Допуск отсутствует!</string>
    <string name="scan">Скан допуска</string>
    <string name="violation">Список нарушений</string>
    <string name="build">Список объектов</string>
    <string name="comment">Комментарий</string>
    <string name="list_proj">Проекты</string>
    <string name="submit">Добавить</string>
    <string name="rating">Рейтинг</string>
    <string name="star">Оценка по проекту</string>
    <string name="ciz">Использование СИЗ</string>
    <string name="work">Качество работ</string>
    <string name="time">Следование срокам</string>
    <string name="team">Наличие проекта в бригаде</string>
    <string name="gc">Отсутствие мусора на участке</string>
    <string name="head">Наличие бригадира</string>
    <string name="allow">Допуск персонала</string>
    <string name="star2">Оценка по работнику</string>
    <string name="docs">Наличие удостоверений</string>
    <string name="quality">Качество работ</string>
    <string name="work2">Трудовая дисциплина</string>
    <string name="instr">Следование инструкциям</string>
    <string name="save">Сохранить</string>

</resources>
