<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:text="@string/violation" />

    <Spinner
        android:id="@+id/vSpinner"
        android:dropDownWidth="fill_parent"
        android:background="@android:drawable/btn_dropdown"
        android:layout_width="match_parent"
        android:popupBackground="#e0f0f0f0"
        android:popupElevation="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:text="@string/list_proj" />

    <Spinner
        android:id="@+id/pSpinner"
        android:dropDownWidth="fill_parent"
        android:background="@android:drawable/btn_dropdown"
        android:layout_width="match_parent"
        android:popupBackground="#e0f0f0f0"
        android:popupElevation="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:text="@string/build" />

    <Spinner
        android:id="@+id/bSpinner"
        android:dropDownWidth="fill_parent"
        android:background="@android:drawable/btn_dropdown"
        android:layout_width="match_parent"
        android:popupBackground="#e0f0f0f0"
        android:popupElevation="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/input"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:textColor="@android:color/black"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/save"
        android:text="@string/submit"
        android:textColor="@android:color/black"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="50dp" />


</LinearLayout>